src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Inter', sans-serif;
}

header {
  padding: 2rem .5rem !important;
}

.card {
  box-shadow: 1px 1px 5px #ddd;
  background-color: #000;
  margin: 30px 0;
  padding: 20px 15px;
}

.card h3 {
  margin: 15px 0;
}

.card .serial {
  background: var(--accent);
  height: 30px;
  width: 30px;
  border-radius: 50%;
  color:#000;
  text-align: center;
  font-size: 20px;
}

.card button {
  margin-top: 20px;
}

.post-comments {
  margin-top: 30px;
}

